--- a/index.html
+++ b/index.html
@@ -1,62 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assistente IA</title>
-    
-    <!-- O CÓDIGO DO SEU AGENTE (NÃO MEXA AQUI) -->
-    <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
-    <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+    <title>Assistente</title>
+</head>
+<body>
+
+    <h1>Bem-vindo(a)!</h1>
+    <p>Clique no ícone de chat no canto para começar.</p>
+
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     <df-messenger
       location="us-central1"
       project-id="quiz-463214"
       agent-id="3c10a064-bd39-4345-92a2-ce56ee3cbd40"
       language-code="pt-br">
-      <df-messenger-chat-bubble
-        chat-title="QuizFácil">
-      </df-messenger-chat-bubble>
     </df-messenger>
-    <style>
-      df-messenger {
-        z-index: 999;
-        position: fixed;
-        bottom: 16px;
-        right: 16px;
-      }
-    </style>
-    <!-- FIM DO CÓDIGO DO AGENTE -->
 
-    <style>
-        /* ESTILOS PARA DEIXAR A PÁGINA BONITA */
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 90vh;
-            margin: 0;
-            background-color: #f3f6fc;
-            text-align: center;
-            color: #333;
-        }
-        .container {
-            max-width: 600px;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 2.5em;
-        }
-        p {
-            font-size: 1.2em;
-            line-height: 1.6;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Bem-vindo(a) ao seu Assistente Pessoal!</h1>
-        <p>Estou aqui para te ajudar a tirar todas as suas dúvidas. Para começar, clique no ícone de chat no canto inferior direito da tela.</p>
-    </div>
 </body>
 </html>
