--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Assistente</title>
+    <title>Teste de Agente</title>
+    <meta charset="UTF-8">
 </head>
 <body>
-
-    <h1>Bem-vindo(a)!</h1>
-    <p>Clique no ícone de chat no canto para começar.</p>
+    <h1>Teste de Conexão</h1>
+    <p>Clique no chat e digite qualquer coisa.</p>
 
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     <df-messenger
-      location="us-central1"
       project-id="quiz-463214"
       agent-id="3c10a064-bd39-4345-92a2-ce56ee3cbd40"
       language-code="pt-br">
     </df-messenger>
-
 </body>
 </html>
