--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     <df-messenger
+      location="us-central1"
       project-id="quiz-463214"
       agent-id="3c10a064-bd39-4345-92a2-ce56ee3cbd40"
       language-code="pt-br">
