--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Teste de Agente</title>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <h1>Teste de Conexão</h1>
-    <p>Clique no chat e digite qualquer coisa.</p>
-
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-    <df-messenger
-      location="us-central1"
-      project-id="quiz-463214"
-      agent-id="3c10a064-bd39-4345-92a2-ce56ee3cbd40"
-      language-code="pt-br">
-    </df-messenger>
-</body>
-</html>
+<link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
+<script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+<df-messenger
+  location="us-central1"
+  project-id="quiz-463214"
+  agent-id="b2b2925d-0af2-46a8-81aa-b9ec2c442e7f"
+  language-code="pt-br"
+  max-query-length="-1">
+  <df-messenger-chat-bubble
+    chat-title="AgenteQuiz">
+  </df-messenger-chat-bubble>
+</df-messenger>
+<style>
+  df-messenger {
+    z-index: 999;
+    position: fixed;
+    --df-messenger-font-color: #000;
+    --df-messenger-font-family: Google Sans;
+    --df-messenger-chat-background: #f3f6fc;
+    --df-messenger-message-user-background: #d3e3fd;
+    --df-messenger-message-bot-background: #fff;
+    bottom: 16px;
+    right: 16px;
+  }
+</style>
