--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Teste Final do Agente</title>
-    <meta charset="UTF-8">
+    <title>Assistente IA</title>
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 </head>
 <body>
     <h1>Assistente de IA</h1>
     <p>Clique no chat e faça uma pergunta.</p>
-
-    <!-- Script de inicialização do Dialogflow Messenger -->
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
     
-    <!-- Componente do Chat com o Endereço Explícito -->
     <df-messenger
       project-id="quiz-463214"
       agent-id="b2b2925d-0af2-46a8-81aa-b9ec2c442e7f"
       language-code="pt-br"
-      location="us-central1"
-      api-uri="us-central1-dialogflow.googleapis.com">
+      location="us-central1">
     </df-messenger>
-
 </body>
 </html>
